# fishing-harbor

./: .env.dist  .gitignore  Cargo.toml  Makefile  README.md  init.sql
docker/: Dockerfile  Dockerfile.dev  Dockerfile.test  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
migrations/2025-02-06-175857_bot_users/: down.sql  up.sql
src/: database.rs  errors.rs  main.rs  models.rs  repositories.rs  schema.rs  service_provider.rs  state.rs  structures.rs  tests.rs  ui.rs
src/commands/: ping.rs
src/enums/: colors.rs
src/errors/: command.rs
src/models/: bot_user.rs
src/repositories/: bot_user_repository.rs
src/services/: user_service.rs
src/structures/: embed_fields.rs
src/tests/: mock.rs  repositories.rs
src/tests/repositories/: test_bot_user_repository.rs
src/ui/: custom_embeds.rs  paginated_embed.rs
