[package]
name = "fishing-harbor"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.7", features = ["chrono", "postgres", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
fish-lib = "0.2.1"
poise = "0.6.1"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
